Import and POM fixes